# Claw_Segmentation

./: .gitignore  README.md  pyproject.toml
claw_segmentation/: analysis.py  inference_pipeline.py  run_inference.py  test.py
claw_segmentation/data/: .~lock.Klauenerziehung_Urliste.xlsx#  Klauenerziehung_Urliste.xlsx
claw_segmentation/data/ergebnisse/: .~lock.ergebnisse2.xlsx#  ergebnisse.csv  ergebnisse.xlsx  ergebnisse2.csv  ergebnisse2.xlsx
scripts/: downscale_new_images.py
